PCI8154/Library/Include/pci_8154.h

I16 FNTYPE _8154_db50_get_gpio_output(I16 CardId, I16 *DoValue );
I16 FNTYPE _8154_db50_get_di_sts( I16 CardId, I16 *DiStsInBit, I16 *EzStsInBit );
// Latch: Section 5.11
I16 FNTYPE _8154_db50_set_di_latch( I16 CardId, I16 Channel, I16 Enable, I16 EdgeSel );
I16 FNTYPE _8154_db50_get_di_latch_value(I16 CardId, I16 Channel, I32 *LatchValue );
// Timer: Section 5.12
I16 FNTYPE _8154_db50_set_Timer( I16 CardId, I16 Channel, I32 Interval );
I16 FNTYPE _8154_db50_start_timer( I16 CardId, I16 Channel, I16 Start );
// Interrupt: Section 5.13
I16 FNTYPE _8154_db50_set_int_control( I16 CardId, I16 intFlag );
I16 FNTYPE _8154_db50_set_int_factor( I16 CardId, I16 IntFactorsInBit );
I16 FNTYPE _8154_db50_get_int_factor( I16 CardId, I16 *IntFactorsInBit );
I16 FNTYPE _8154_db50_wait_single_int( I16 CardId, I16 FactorBitNum, I32 TimeOutMs );
I16 FNTYPE _8154_db50_reset_int( I16 CardId, I16 FactorBitNum );
 

/****************************************************************************/
/*     DB-8151  Function  Declerations                                      */
/****************************************************************************/
// Initialization and System Information Section
//_8154_db51_
I16 FNTYPE _8154_db51_HSL_initial(I16 card_ID);
I16 FNTYPE _8154_db51_HSL_close(I16 card_ID);
I16 FNTYPE _8154_db51_HSL_auto_start(I16 card_ID);
I16 FNTYPE _8154_db51_HSL_start(I16 card_ID, I16 max_slave_No);
I16 FNTYPE _8154_db51_HSL_stop(I16 card_ID);
I16 FNTYPE _8154_db51_HSL_connect_status(I16 card_ID, I16 slave_No, I16 *sts_data);
I16 FNTYPE _8154_db51_HSL_slave_live(I16 card_ID, I16 slave_No, I16 *live_data);
I16 FNTYPE _8154_db51_HSL_get_slave_type(I16 card_ID, I16 slave_No, U16 *type_data);
I16 FNTYPE _8154_db51_HSL_set_scan_condition(I16 card_ID, I16 transfer_rate, I16 hub_number);
I16 FNTYPE _8154_db51_HSL_get_scan_condition(I16 card_ID, I16 *transfer_rate, I16 *hub_number);
I16 FNTYPE _8154_db51_HSL_get_version(I16 card_ID, I32 *Firmware_Version, I32 *Driver_Version, I32 *Software_Version);
// DIO
I16 FNTYPE _8154_db51_HSL_D_write_output(I16 card_ID, I16 slave_No, U32 out_data);
I16 FNTYPE _8154_db51_HSL_D_write_channel_output(I16 card_ID, I16 slave_No, I16 channel, U16 out_data);
I16 FNTYPE _8154_db51_HSL_D_read_input(I16 card_ID, I16 slave_No, U32 *in_data);
I16 FNTYPE _8154_db51_HSL_D_read_channel_input(I16 card_ID, I16 slave_No, I16 channel, U16 *in_data);
I16 FNTYPE _8154_db51_HSL_D_read_output(I16 card_ID, I16 slave_No, U32 *out_data_in_ram);
I16 FNTYPE _8154_db51_HSL_D_read_all_slave_input(I16 card_ID, U16 *in_data);
I16 FNTYPE _8154_db51_HSL_D_write_all_slave_output(I16 card_ID, U16 *out_data);
I16 FNTYPE _8154_db51_HSL_D_set_input_logic(I16 card_ID, I16 slave_No, I16 input_logic);
I16 FNTYPE _8154_db51_HSL_D_set_output_logic(I16 card_ID, I16 slave_No, I16 output_logic);
I16 FNTYPE _8154_db51_HSL_D_write_slave_output(I16 card_ID, I16 slave_No, U16 out_data);
I16 FNTYPE _8154_db51_HSL_D_read_slave_output(U16 card_ID, I16 slave_No, U16 *data_out);
I16 FNTYPE _8154_db51_HSL_D_read_slave_input(U16 card_ID, I16 slave_No, U16 *data_in);
//DI INTERRUPT (ONLY FOR 7853/54)
I16 FNTYPE _8154_db51_HSL_D_set_int_renewal_type(I16 card_ID, I16 type);
				
I16 FNTYPE _8154_db51_HSL_D_set_int_renewal_bit(I16 card_ID, I16 slave_No, U16 bitsOfCheck);
I16 FNTYPE _8154_db51_HSL_D_set_int_control(I16 card_ID, I16 enable);
						
I16 FNTYPE _8154_db51_HSL_D_wait_di_interrupt(I16 card_ID, I32 time_out_ms);
// FOR DI16-UL
I16 FNTYPE _8154_db51_HSL_D_set_di_latch_function(I16 card_ID, I16 slave_No, I16 channel, I16 active_mode, I16 duration);
I16 FNTYPE _8154_db51_HSL_D_set_di_latch_functionA(I16 card_ID, I16 slave_No, I16 edge, I16 duration);
I16 FNTYPE _8154_db51_HSL_D_get_di_latch_function(I16 card_ID, I16 slave_No, I16 channel, I16 *active_mode, I16 *duration);
// AIO
I16 FNTYPE _8154_db51_HSL_A_start_read(I16 card_ID);
I16 FNTYPE _8154_db51_HSL_A_stop_read(I16 card_ID);
I16 FNTYPE _8154_db51_HSL_A_set_signal_range(I16 card_ID, I16 slave_No, I16 signal_range);
I16 FNTYPE _8154_db51_HSL_A_get_signal_range(I16 card_ID, I16 slave_No, I16 *signal_range);
I16 FNTYPE _8154_db51_HSL_A_get_input_mode(I16 card_ID, I16 slave_No, I16 *mode);
I16 FNTYPE _8154_db51_HSL_A_set_last_channel(I16 card_ID, I16 slave_No, I16 last_channel);
I16 FNTYPE _8154_db51_HSL_A_get_last_channel(I16 card_ID, I16 slave_No, I16 *last_channel);
I16 FNTYPE _8154_db51_HSL_A_read_input(I16 card_ID, I16 slave_No, I16 ai_channel, F64 *ai_data);
I16 FNTYPE _8154_db51_HSL_A_write_output(I16 card_ID, I16 slave_No, I16 ao_channel, F64 ao_data);
I16 FNTYPE _8154_db51_HSL_A_read_output(I16 card_ID, I16 slave_No, I16 ao_channel, F64 *ao_data);
I16 FNTYPE _8154_db51_HSL_A_sync_rw(I16 card_ID, I16 slave_No, I16 ai_channel, F64 *ai_data, I16 ao_channel, F64 ao_data);
I16 FNTYPE _8154_db51_HSL_A_get_version(I16 card_ID, I16 slave_No, I16 *ver);
// AO4
I16 FNTYPE _8154_db51_HSL_set_keep_mode(I16 card_ID, I16 slave_No, I16 Mode);
/****************************************************************************/
// The following function declarations are old								*/
/****************************************************************************/
U16 FNTYPE _8154_db51_W_HSL_Initial(U16 card_ID);
U16 FNTYPE _8154_db51_W_HSL_Close(U16 card_ID);
U16 FNTYPE _8154_db51_W_HSL_Auto_Start(U16 card_ID);
U16 FNTYPE _8154_db51_W_HSL_Start(U16 card_ID, U16 max_slave_No);
U16 FNTYPE _8154_db51_W_HSL_Stop(U16 card_ID);
U16 FNTYPE _8154_db51_W_HSL_Connect_Status(U16 card_ID, U16 slave_No, U8 *sts_data);
U16 FNTYPE _8154_db51_W_HSL_Slave_Live(U16 card_ID, U16 slave_No, U8 *live_data);