PCI8154/Library/Include/pci_8154.bas

Declare Function B_8154_db50_get_gpio_output Lib "8154.dll" Alias "_8154_db50_get_gpio_output" (ByVal CardId As Integer, DoValue As Integer) As Integer
Declare Function B_8154_db50_get_di_sts Lib "8154.dll" Alias "_8154_db50_get_di_sts" (ByVal CardId As Integer, DiStsInBit As Integer, EzStsInBit As Integer) As Integer
'
'  Latch: Section 5.11
Declare Function B_8154_db50_set_di_latch Lib "8154.dll" Alias "_8154_db50_set_di_latch" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal enable As Integer, ByVal EdgeSel As Integer) As Integer
Declare Function B_8154_db50_get_di_latch_value Lib "8154.dll" Alias "_8154_db50_get_di_latch_value" (ByVal CardId As Integer, ByVal Channel As Integer, LatchValue As Long) As Integer
'
'  Timer: Section 5.12
Declare Function B_8154_db50_set_Timer Lib "8154.dll" Alias "_8154_db50_set_Timer" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal Interval As Long) As Integer
Declare Function B_8154_db50_start_timer Lib "8154.dll" Alias "_8154_db50_start_timer" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal Start As Integer) As Integer
'
'  Interrupt: Section 5.13
Declare Function B_8154_db50_set_int_control Lib "8154.dll" Alias "_8154_db50_set_int_control" (ByVal CardId As Integer, ByVal intFlag As Integer) As Integer
Declare Function B_8154_db50_set_int_factor Lib "8154.dll" Alias "_8154_db50_set_int_factor" (ByVal CardId As Integer, ByVal IntFactorsInBit As Integer) As Integer
Declare Function B_8154_db50_get_int_factor Lib "8154.dll" Alias "_8154_db50_get_int_factor" (ByVal CardId As Integer, IntFactorsInBit As Integer) As Integer
Declare Function B_8154_db50_wait_single_int Lib "8154.dll" Alias "_8154_db50_wait_single_int" (ByVal CardId As Integer, ByVal FactorBitNum As Integer, ByVal TimeOutMs As Long) As Integer
Declare Function B_8154_db50_reset_int Lib "8154.dll" Alias "_8154_db50_reset_int" (ByVal CardId As Integer, ByVal FactorBitNum As Integer) As Integer
'
' /****************************************************************************/
' /*     DB-8151  Function  Declerations                                      */
' /****************************************************************************/
'  Initialization and System Information Section
' _8154_db51_
Declare Function B_8154_db51_HSL_initial Lib "8154.dll" Alias "_8154_db51_HSL_initial" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_HSL_close Lib "8154.dll" Alias "_8154_db51_HSL_close" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_HSL_auto_start Lib "8154.dll" Alias "_8154_db51_HSL_auto_start" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_HSL_start Lib "8154.dll" Alias "_8154_db51_HSL_start" (ByVal card_ID As Integer, ByVal max_slave_No As Integer) As Integer
Declare Function B_8154_db51_HSL_stop Lib "8154.dll" Alias "_8154_db51_HSL_stop" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_HSL_connect_status Lib "8154.dll" Alias "_8154_db51_HSL_connect_status" (ByVal card_ID As Integer, ByVal slave_No As Integer, sts_data As Integer) As Integer
Declare Function B_8154_db51_HSL_slave_live Lib "8154.dll" Alias "_8154_db51_HSL_slave_live" (ByVal card_ID As Integer, ByVal slave_No As Integer, live_data As Integer) As Integer
Declare Function B_8154_db51_HSL_get_slave_type Lib "8154.dll" Alias "_8154_db51_HSL_get_slave_type" (ByVal card_ID As Integer, ByVal slave_No As Integer, type_data As Integer) As Integer
Declare Function B_8154_db51_HSL_set_scan_condition Lib "8154.dll" Alias "_8154_db51_HSL_set_scan_condition" (ByVal card_ID As Integer, ByVal transfer_rate As Integer, ByVal hub_number As Integer) As Integer
Declare Function B_8154_db51_HSL_get_scan_condition Lib "8154.dll" Alias "_8154_db51_HSL_get_scan_condition" (ByVal card_ID As Integer, transfer_rate As Integer, hub_number As Integer) As Integer
Declare Function B_8154_db51_HSL_get_version Lib "8154.dll" Alias "_8154_db51_HSL_get_version" (ByVal card_ID As Integer, Firmware_Version As Long, Driver_Version As Long, Software_Version As Long) As Integer
'
'  DIO
Declare Function B_8154_db51_HSL_D_write_output Lib "8154.dll" Alias "_8154_db51_HSL_D_write_output" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal out_data As Long) As Integer
Declare Function B_8154_db51_HSL_D_write_channel_output Lib "8154.dll" Alias "_8154_db51_HSL_D_write_channel_output" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, ByVal out_data As Integer) As Integer
Declare Function B_8154_db51_HSL_D_read_input Lib "8154.dll" Alias "_8154_db51_HSL_D_read_input" (ByVal card_ID As Integer, ByVal slave_No As Integer, in_data As Long) As Integer
Declare Function B_8154_db51_HSL_D_read_channel_input Lib "8154.dll" Alias "_8154_db51_HSL_D_read_channel_input" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, in_data As Integer) As Integer
Declare Function B_8154_db51_HSL_D_read_output Lib "8154.dll" Alias "_8154_db51_HSL_D_read_output" (ByVal card_ID As Integer, ByVal slave_No As Integer, out_data_in_ram As Long) As Integer
Declare Function B_8154_db51_HSL_D_read_all_slave_input Lib "8154.dll" Alias "_8154_db51_HSL_D_read_all_slave_input" (ByVal card_ID As Integer, in_data As Integer) As Integer
Declare Function B_8154_db51_HSL_D_write_all_slave_output Lib "8154.dll" Alias "_8154_db51_HSL_D_write_all_slave_output" (ByVal card_ID As Integer, out_data As Integer) As Integer
Declare Function B_8154_db51_HSL_D_set_input_logic Lib "8154.dll" Alias "_8154_db51_HSL_D_set_input_logic" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Input_Logic As Integer) As Integer
Declare Function B_8154_db51_HSL_D_set_output_logic Lib "8154.dll" Alias "_8154_db51_HSL_D_set_output_logic" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Output_Logic As Integer) As Integer
Declare Function B_8154_db51_HSL_D_write_slave_output Lib "8154.dll" Alias "_8154_db51_HSL_D_write_slave_output" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal out_data As Integer) As Integer
Declare Function B_8154_db51_HSL_D_read_slave_output Lib "8154.dll" Alias "_8154_db51_HSL_D_read_slave_output" (ByVal card_ID As Integer, ByVal slave_No As Integer, data_out As Integer) As Integer
Declare Function B_8154_db51_HSL_D_read_slave_input Lib "8154.dll" Alias "_8154_db51_HSL_D_read_slave_input" (ByVal card_ID As Integer, ByVal slave_No As Integer, data_in As Integer) As Integer
'
' DI INTERRUPT (ONLY FOR 7853/54)
Declare Function B_8154_db51_HSL_D_set_int_renewal_type Lib "8154.dll" Alias "_8154_db51_HSL_D_set_int_renewal_type" (ByVal card_ID As Integer, ByVal type_ As Integer) As Integer
Declare Function B_8154_db51_HSL_D_set_int_renewal_bit Lib "8154.dll" Alias "_8154_db51_HSL_D_set_int_renewal_bit" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal bitsOfCheck As Integer) As Integer
Declare Function B_8154_db51_HSL_D_set_int_control Lib "8154.dll" Alias "_8154_db51_HSL_D_set_int_control" (ByVal card_ID As Integer, ByVal enable As Integer) As Integer
Declare Function B_8154_db51_HSL_D_wait_di_interrupt Lib "8154.dll" Alias "_8154_db51_HSL_D_wait_di_interrupt" (ByVal card_ID As Integer, ByVal time_out_ms As Long) As Integer
'
'  FOR DI16-UL
Declare Function B_8154_db51_HSL_D_set_di_latch_function Lib "8154.dll" Alias "_8154_db51_HSL_D_set_di_latch_function" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, ByVal active_mode As Integer, ByVal duration As Integer) As Integer
Declare Function B_8154_db51_HSL_D_set_di_latch_functionA Lib "8154.dll" Alias "_8154_db51_HSL_D_set_di_latch_functionA" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal edge As Integer, ByVal duration As Integer) As Integer
Declare Function B_8154_db51_HSL_D_get_di_latch_function Lib "8154.dll" Alias "_8154_db51_HSL_D_get_di_latch_function" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Channel As Integer, active_mode As Integer, duration As Integer) As Integer
'
'  AIO
Declare Function B_8154_db51_HSL_A_start_read Lib "8154.dll" Alias "_8154_db51_HSL_A_start_read" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_HSL_A_stop_read Lib "8154.dll" Alias "_8154_db51_HSL_A_stop_read" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_HSL_A_set_signal_range Lib "8154.dll" Alias "_8154_db51_HSL_A_set_signal_range" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal signal_range As Integer) As Integer
Declare Function B_8154_db51_HSL_A_get_signal_range Lib "8154.dll" Alias "_8154_db51_HSL_A_get_signal_range" (ByVal card_ID As Integer, ByVal slave_No As Integer, signal_range As Integer) As Integer
Declare Function B_8154_db51_HSL_A_get_input_mode Lib "8154.dll" Alias "_8154_db51_HSL_A_get_input_mode" (ByVal card_ID As Integer, ByVal slave_No As Integer, mode As Integer) As Integer
Declare Function B_8154_db51_HSL_A_set_last_channel Lib "8154.dll" Alias "_8154_db51_HSL_A_set_last_channel" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal Last_Channel As Integer) As Integer
Declare Function B_8154_db51_HSL_A_get_last_channel Lib "8154.dll" Alias "_8154_db51_HSL_A_get_last_channel" (ByVal card_ID As Integer, ByVal slave_No As Integer, Last_Channel As Integer) As Integer
Declare Function B_8154_db51_HSL_A_read_input Lib "8154.dll" Alias "_8154_db51_HSL_A_read_input" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal ai_channel As Integer, AI_data As Double) As Integer
Declare Function B_8154_db51_HSL_A_write_output Lib "8154.dll" Alias "_8154_db51_HSL_A_write_output" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal ao_channel As Integer, ByVal AO_data As Double) As Integer
Declare Function B_8154_db51_HSL_A_read_output Lib "8154.dll" Alias "_8154_db51_HSL_A_read_output" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal ao_channel As Integer, AO_data As Double) As Integer
Declare Function B_8154_db51_HSL_A_sync_rw Lib "8154.dll" Alias "_8154_db51_HSL_A_sync_rw" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal ai_channel As Integer, AI_data As Double, ByVal ao_channel As Integer, ByVal AO_data As Double) As Integer
Declare Function B_8154_db51_HSL_A_get_version Lib "8154.dll" Alias "_8154_db51_HSL_A_get_version" (ByVal card_ID As Integer, ByVal slave_No As Integer, Ver As Integer) As Integer
'  AO4
Declare Function B_8154_db51_HSL_set_keep_mode Lib "8154.dll" Alias "_8154_db51_HSL_set_keep_mode" (ByVal card_ID As Integer, ByVal slave_No As Integer, ByVal mode As Integer) As Integer
'
' /****************************************************************************/
'  The following function declarations are old                                                          */
' /****************************************************************************/
Declare Function B_8154_db51_W_HSL_Initial Lib "8154.dll" Alias "_8154_db51_W_HSL_Initial" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_W_HSL_Close Lib "8154.dll" Alias "_8154_db51_W_HSL_Close" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_W_HSL_Auto_Start Lib "8154.dll" Alias "_8154_db51_W_HSL_Auto_Start" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_W_HSL_Start Lib "8154.dll" Alias "_8154_db51_W_HSL_Start" (ByVal card_ID As Integer, ByVal max_slave_No As Integer) As Integer
Declare Function B_8154_db51_W_HSL_Stop Lib "8154.dll" Alias "_8154_db51_W_HSL_Stop" (ByVal card_ID As Integer) As Integer
Declare Function B_8154_db51_W_HSL_Connect_Status Lib "8154.dll" Alias "_8154_db51_W_HSL_Connect_Status" (ByVal card_ID As Integer, ByVal slave_No As Integer, sts_data As Byte) As Integer
Declare Function B_8154_db51_W_HSL_Slave_Live Lib "8154.dll" Alias "_8154_db51_W_HSL_Slave_Live" (ByVal card_ID As Integer, ByVal slave_No As Integer, live_data As Byte) As Integer
'
